<resources>
    <string name="app_name">Examing</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="description">The best way to\n<br/>take your exam</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>